# iperf3-rs

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE-SORACOM  Makefile  README.md  build.rs  dist-workspace.toml  docker-compose.test.yml  docker-compose.yml
.github/: actionlint.yaml  dist-build-setup.yml  pull_request_template.md  renovate.json
.github/scripts/: generate_homebrew_formula.py  publish_homebrew_tap.sh  release_metadata.sh
.github/workflows/: checks.yml  ci.yml  container-release.yml  ghcr.yml  quality-gates.yml  release.yml
completions/: _iperf3-rs  iperf3-rs.bash  iperf3-rs.fish
docker/grafana/dashboards/: iperf3-rs.json
docker/grafana/provisioning/dashboards/: iperf3-rs.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/prometheus/: prometheus.yml
examples/bwcheck/: Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  integration_test.rs
examples/bwcheck/src/: main.rs
native/: iperf3rs_shim.c  iperf3rs_shim.h
scripts/: generate-homebrew-formula.sh  release.sh
src/: args.rs  cli.rs  command.rs  error.rs  help.rs  iperf.rs  lib.rs  main.rs  metrics.rs  metrics_file.rs  prometheus.rs  pushgateway.rs  version.rs
tests/: integration_test.rs  library_api_test.rs  release_image_test.rs
tests/e2e/: docker_compose.rs  helpers.rs  mod.rs  release_image.rs
tests/integration/: api.rs  cli.rs  command.rs  compose.sh  helpers.rs  mod.rs
tests/support/: mod.rs
