[package]
name = "iperf3-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
# Use webpki roots so the scratch release image can validate public HTTPS
# Pushgateway certificates without an OS CA bundle.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[build-dependencies]
cc = "1"
