[package]
name = "iperf3-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
description = "Rust API and frontend for libiperf/iperf3 with live metrics export"
repository = "https://github.com/mi2428/iperf3-rs"
homepage = "https://github.com/mi2428/iperf3-rs"
documentation = "https://docs.rs/iperf3-rs"
readme = "README.md"
keywords = ["iperf3", "prometheus", "metrics", "observability", "bandwidth"]
categories = ["network-programming", "api-bindings"]
build = "build.rs"
license = "MIT AND BSD-3-Clause-LBNL"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/LICENSE-SORACOM",
  "/README.md",
  "/build.rs",
  "/iperf3/LICENSE",
  "/iperf3/Makefile.am",
  "/iperf3/Makefile.in",
  "/iperf3/aclocal.m4",
  "/iperf3/config/**",
  "/iperf3/configure",
  "/iperf3/configure.ac",
  "/iperf3/examples/Makefile.am",
  "/iperf3/examples/Makefile.in",
  "/iperf3/iperf3.spec.in",
  "/iperf3/src/**",
  "/native/**",
  "/rust-toolchain.toml",
  "/src/**",
  "/tests/integration_test.rs",
  "/tests/library_api_test.rs",
]

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
# Use webpki roots so the scratch release image can validate public HTTPS
# Pushgateway certificates without an OS CA bundle.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[build-dependencies]
cc = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
