[package]
name = "iperf3-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.93.0"
links = "iperf"
description = "Rust API for libiperf with live iperf3 metrics export"
repository = "https://github.com/mi2428/iperf3-rs"
homepage = "https://github.com/mi2428/iperf3-rs"
documentation = "https://docs.rs/iperf3-rs"
readme = "README.md"
keywords = ["iperf3", "prometheus", "metrics", "observability", "bandwidth"]
categories = ["network-programming", "api-bindings"]
build = "build.rs"
license = "MIT AND BSD-3-Clause-LBNL"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/LICENSE-SORACOM",
  "/README.md",
  "/build.rs",
  "/iperf3/LICENSE",
  "/iperf3/Makefile.am",
  "/iperf3/Makefile.in",
  "/iperf3/aclocal.m4",
  "/iperf3/config/**",
  "/iperf3/configure",
  "/iperf3/configure.ac",
  "/iperf3/examples/Makefile.am",
  "/iperf3/examples/Makefile.in",
  "/iperf3/iperf3.spec.in",
  "/iperf3/src/**",
  "!/iperf3/src/private.pem",
  "!/iperf3/src/public.pem",
  "/native/**",
  "/rust-toolchain.toml",
  "/src/**",
  "/tests/integration_test.rs",
  "/tests/integration/**",
]

[dependencies]
anyhow = { version = "1", optional = true }
crossbeam-channel = "0.5"
# Use webpki roots so the scratch release image can validate public HTTPS
# Pushgateway certificates without an OS CA bundle.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["pushgateway", "serde"]
openssl = []
pushgateway = ["dep:anyhow", "dep:reqwest", "dep:url"]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "iperf3-rs"
path = "src/main.rs"
required-features = ["pushgateway", "serde"]

[build-dependencies]
cc = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
